--- a/my-app/src/style.css
+++ b/my-app/src/style.css
@@ -7,23 +7,22 @@
   font-family: "Open Sans", sans-serif;
 }
 
+body {
+  background: black;
+}
+
 .Nav-section {
   display: grid;
   grid-template-columns: 1fr 3fr;
   grid-template-areas:
     "side-bar main-area"
     "signup-bar signup-bar";
-  background: black;
 }
-
 
 .main-area {
   grid-area: main-area;
 }
 
-
-
-
-
-
-
+.menubar {
+  visibility: hidden;
+}
