--- a/my-app/src/components/Register/Register.css
+++ b/my-app/src/components/Register/Register.css
@@ -167,5 +167,9 @@
     display: grid;
     width: 308px;
     margin: 20px auto;
-  }
+    position: absolute;
+    top: 220%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
+  }
